fixes search input color when in dark mode

--- a/app/components/vis-bug/vis-bug.element.css
+++ b/app/components/vis-bug/vis-bug.element.css
@@ -215,6 +215,7 @@
   box-sizing: border-box;
   caret-color: hotpink;
   background-color: var(--theme-bg);
+  color: var(--theme-text_color);
 
   &::placeholder {
     font-weight: lighter;
